--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,26 +1,52 @@
 .container {
+  display: grid;
+  grid-template-areas: 
+  "header"
+  "main"
+  "main"
+  "footer";
+  grid-template-rows: 1fr 10fr 10fr 1fr;
+  height: 100vh;
+  min-height: 40rem;
   background-color: #F7F7F7;
+  background-image: url("/images/meteryx-preview.png");
+  background-position: center;
+  background-attachment: local;
+  background-size: calc(40vw + 25vh);
+  background-repeat: no-repeat;
+}
+.header {
+  grid-area: header;
 }
 
 .main {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
-  padding: 1rem 10rem;
-  height: calc(100vh - 8.4rem);
-  width: 100vw;
-  background-color: var(--bg-secondary);
-}
-
-.main .row {
+  grid-area: main;
   display: flex;
   align-items: center;
-  justify-content: space-around;
-  flex-grow: 1;
+  justify-content: center;
+  align-self: center;
+  justify-self: center;
+  width: 100%;
+  height: 100%;
+  min-height: fit-content;
+
 }
 
-.main .row.center {
+.appLink {
+  min-width: 20rem;
+  width: 50vw;
+}
+
+.footer {
+  padding-bottom: 1.5rem;
+  grid-area: footer;
+  display: flex;
+  align-items: center;
   justify-content: center;
+}
+.footer svg {
+  width: 8rem;
+
 }
 
 .logoText {
@@ -28,4 +54,10 @@
   color: var(--meteryx-highlight);
   font-size: 2.5rem;
   margin-right: 2rem;
+}
+
+@media screen and (max-width: 600px) {
+  .container {
+    background-size: 80vw;
+  }
 }
