--- a/styles/meteryx-button.module.css
+++ b/styles/meteryx-button.module.css
@@ -4,7 +4,9 @@
     justify-content: center;
     font-size: 0.85rem;
     border-radius: 2rem;
-    padding: 0.5rem;
+    min-width: max-content;
+    min-height: fit-content;
+    padding: 0.75rem;
     color: white;
     background: linear-gradient(180deg, #00537F 0%, #2C2E4F 150%);
     box-shadow: 0px 2px 3px rgba(0, 0, 0, 0.4);
